# csc_gordeev_cpp

./: .gitignore  CMakeLists.txt  EvictingCacheMap.h  README.md  runchecks
include/: EvictingCacheMap.h
lab1-LRU/: .gitignore  README.md  runchecks
lab2-Streams/: CMakeLists.txt  ProjectStructure.cpp  README.md  project_structure.cpp  runchecks
lab2-Streams/include/: Stream.h  StreamInterface.h  StreamOperations.h  StreamOperators.h  StreamProviders.h  StreamTerminators.h
lab2-Streams/src/: Example.cpp  NoisyType.h  example.cpp
lab2-Streams/tests/: CMakeLists.txt  IteratorBasedStream.cpp  StreamTests.cpp
src/: example.cpp
tests/: CMakeLists.txt  EvictingCacheMapTests.cpp
